@@ -1,8 +1,8 @@
 Package: spida2
 Type: Package
 Title: Collection of tools developed for the Summer Programme in Data Analysis 2000-2012
-Version: 0.1.2.9000
-Date: 2018-11-21
+Version: 0.2.0.9000
+Date: 2019-12-08
 Author: Georges Monette [aut, cre], 
   John Fox [aut], 
   Michael Friendly [aut], 
