@@ -192,6 +192,7 @@ export(lin_comb)
 export(llapply)
 export(long)
 export(lty)
+export(make.grid)
 export(map)
 export(na.include)
 export(na20)
@@ -202,6 +203,7 @@ export(pab)
 export(pal)
 export(pals)
 export(panel.band)
+export(panel.barchart2)
 export(panel.box)
 export(panel.dell)
 export(panel.errorbars)
@@ -248,6 +250,7 @@ export(uv)
 export(varLevel)
 export(wald)
 export(wald.transform)
+export(wald2)
 export(walddf)
 export(wtd_mean)
 export(xqplot)
