@@ -41,7 +41,7 @@ the corresponding element of \code{Llist} has a NULL data attribute}
 variance-covariance matrix is returned}
 
 \item{full}{if TRUE, the hypothesis matrix is the model matrix for
- \code{fit} such that the estimated coefficients are the predicted values for
+\code{fit} such that the estimated coefficients are the predicted values for
 the fixed portion of the model. This is designed to allow the calculation of
 standard errors for models for which the \code{predict} method does not
 provide them.}
